testsuite/tests/rename/should_fail/T13947.hs
{-# LANGUAGE TypeOperators #-}
module T13947 where

f :: () -> Int :~: Int
f = undefined
