testsuite/tests/rename/should_fail/T13947.stderr

T13947.hs:4:16: error: [GHC-76037]
    Not in scope: type constructor or class ‘:~:’
